--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,12 @@ name: Vite application
 
 on:
     push:
-        branches: [ "main" ]
+        branches:
+            - main
 
 jobs:
     build:
-        runs-on: {{ matrix.os }}
+        runs-on: ${{ matrix.os }}
         strategy:
           matrix:
             os: [ ubuntu-latest, windows-latest, macos-latest]
