--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,14 @@ jobs:
     deploy:
         needs: build
 
+        runs-on: ${{ matrix.os }}
+
+        strategy:
+          matrix:
+            os: [ ubuntu-latest, windows-latest, macos-latest ]
+            node-version: [ 16.x, 18.x ]
+            # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
         steps:
           - uses: actions/checkout@v3
           - name: Deploy to GitHub Pages
