--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,10 @@ on:
 jobs:
     build:
         runs-on: ${{ matrix.os }}
+
         strategy:
           matrix:
-            os: [ ubuntu-latest, windows-latest, macos-latest]
+            os: ubuntu-latest
             node-version: [ 16.x, 18.x ]
             # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
@@ -36,7 +37,7 @@ jobs:
 
         strategy:
           matrix:
-            os: [ ubuntu-latest, windows-latest, macos-latest ]
+            os: ubuntu-latest
             node-version: [ 16.x, 18.x ]
             # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
