--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
 
         strategy:
           matrix:
-            node-version: [ 16.x, 18.x ]
-            # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+            node-version:
+              - 20.x
 
         steps:
           - uses: actions/checkout@v3
@@ -36,13 +36,14 @@ jobs:
 
         strategy:
           matrix:
-            node-version: [ 16.x, 18.x ]
-            # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+            node-version:
+              - 20.x
 
         steps:
           - uses: actions/checkout@v3
+
           - name: Deploy to GitHub Pages
             uses: peaceiris/actions-gh-pages@v3
             with:
-              github_token: ${{ secrets.VITE_APP_TOKEN}}
+              github_token: ${{ secrets.VITE_APP_TOKEN }}
               publish_dir: ./dist
