--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,7 @@ jobs:
 
         strategy:
           matrix:
-            node-version:
-              - 20
+            node-version: [20.x]
 
         steps:
           - uses: actions/checkout@v3
@@ -36,8 +35,7 @@ jobs:
 
         strategy:
           matrix:
-            node-version:
-              - 20
+            node-version: [20.x]
 
         steps:
           - uses: actions/checkout@v3
