--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,12 @@ jobs:
         steps:
           - uses: actions/checkout@v3
 
+          - name: Download artifact
+            uses: actions/download-artifact@v3
+            with:
+              name: production files
+              path: ./dist
+
           - name: Deploy to GitHub Pages
             uses: peaceiris/actions-gh-pages@v3
             with:
