--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
     build:
+        name: Build
         runs-on: ubuntu-latest
 
         strategy:
@@ -29,6 +30,7 @@ jobs:
             run: npm run build
 
     deploy:
+        name: Deploy
         needs: build
 
         runs-on: ubuntu-latest
@@ -37,8 +39,9 @@ jobs:
           matrix:
             node-version: [20.x]
 
+        if: github.ref == 'refs/heads/main'
+
         steps:
-          - uses: actions/checkout@v3
 
           - name: Download artifact
             uses: actions/download-artifact@v3
