Add ci/cd with github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,10 @@ jobs:
 
         if: github.ref == 'refs/heads/main'
 
+        permissions:
+          contents: write
+          packages: write
+
         steps:
 
           - name: Download artifact
