Add ci/cd with github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,8 @@ jobs:
           packages: write
 
         steps:
+          - uses: actions/checkout@v3
+
           - name: Deploy to GitHub Pages
             uses: peaceiris/actions-gh-pages@v3
             with:
