Add ci/cd with github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,11 @@ on:
     push:
         branches: [ "main" ]
 
+
+permissions:
+  contents: read
+  pages: write
+
 jobs:
     build:
         name: Build
@@ -40,15 +45,12 @@ jobs:
 
         if: github.ref == 'refs/heads/main'
 
-        permissions:
-          contents: write
-          packages: write
-
         steps:
+          - name: Checkout
           - uses: actions/checkout@v3
 
           - name: Deploy to GitHub Pages
-            uses: peaceiris/actions-gh-pages@v3
+            uses: actions/deploy-pages@v4
             with:
               github_token: ${{ secrets.VITE_APP_TOKEN }}
               publish_dir: ./dist
