--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           - uses: actions/checkout@v3
 
           - name: Use Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@v3
+          - uses: actions/setup-node@v3
             with:
               node-version: ${{ matrix.node-version }}
               cache: 'npm'
@@ -46,7 +46,7 @@ jobs:
           - uses: actions/checkout@v3
 
           - name: Deploy to GitHub Pages
-            uses: actions/deploy-pages@v4
+          - uses: actions/deploy-pages@v4
             with:
               github_token: ${{ secrets.VITE_APP_TOKEN }}
               publish_dir: ./dist
