--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,10 @@ jobs:
             node-version: [20.x]
 
         steps:
-          - name: Checkout
           - uses: actions/checkout@v3
 
           - name: Use Node.js ${{ matrix.node-version }}
-          - uses: actions/setup-node@v3
+            uses: actions/setup-node@v3
             with:
               node-version: ${{ matrix.node-version }}
               cache: 'npm'
@@ -41,12 +40,15 @@ jobs:
 
         if: github.ref == 'refs/heads/main'
 
+        permissions:
+          contents: write
+          packages: write
+
         steps:
-          - name: Checkout
           - uses: actions/checkout@v3
 
           - name: Deploy to GitHub Pages
-          - uses: actions/deploy-pages@v4
+            uses: peaceiris/actions-gh-pages@v3
             with:
               github_token: ${{ secrets.VITE_APP_TOKEN }}
               publish_dir: ./dist
