--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,8 @@ jobs:
         steps:
           - uses: actions/checkout@v3
 
-          - name: Deploy to GitHub Pages
-            uses: peaceiris/actions-gh-pages@v3
+          - name: Deploy application
+            uses: JamesIves/github-pages-deploy-action@v4.3.3
             with:
-              github_token: ${{ secrets.VITE_APP_TOKEN }}
-              publish_dir: ./dist
+              branch: gh-pages
+              folder: dist
