--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,4 @@ jobs:
             uses: JamesIves/github-pages-deploy-action@v4.3.3
             with:
               branch: gh-pages
-              folder: ./dist
+              folder: ../dist
