--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
             node-version: [20.x]
 
         steps:
+          - name: Checkout
+            uses: actions/checkout@v3
+
           - name: Use Node.js ${{ matrix.node-version }}
             uses: actions/setup-node@v3
             with:
@@ -43,8 +46,6 @@ jobs:
           packages: write
 
         steps:
-          - uses: actions/checkout@v3
-
           - name: Deploy application
             uses: JamesIves/github-pages-deploy-action@v4.3.3
             with:
