--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,11 @@ jobs:
           packages: write
 
         steps:
+          - name: Checkout
+            uses: actions/checkout@v3
+
           - name: Deploy application
             uses: JamesIves/github-pages-deploy-action@v4.3.3
             with:
-              branch: gh-pages
-              folder: ../dist
+              branch: CI/CD
+              folder: ./dist
