Add ci/cd with github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,25 +29,25 @@ jobs:
           - name: Build application
             run: npm run build
 
+          - name: Upload production-ready build files
+            uses: actions/upload-artifact@v4
+            with:
+              name: production-files
+              path: ./dist
+
+
     deploy:
         name: Deploy
         needs: build
-
         runs-on: ubuntu-latest
-
-        strategy:
-          matrix:
-            node-version: [20.x]
-
         if: github.ref == 'refs/heads/main'
 
-        permissions:
-          contents: write
-          packages: write
-
         steps:
-          - name: Checkout
-            uses: actions/checkout@v3
+          - name: Download artifact
+            uses: actions/download-artifact@v4
+            with:
+              name: production-files
+              path: ./dist
 
           - name: Deploy application
             uses: JamesIves/github-pages-deploy-action@v4.3.3
