--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,55 +1,49 @@
-name: Vite application
+name: Deploy
 
 on:
-    push:
-        branches: [ "main" ]
+  push:
+    branches:
+      - main
 
 jobs:
-    build:
-        name: Build
-        runs-on: ubuntu-latest
+  build:
+    name: Build
+    runs-on: ubuntu-latest
 
-        strategy:
-          matrix:
-            node-version: [20.x]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-        steps:
-          - name: Checkout
-            uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
 
-          - name: Use Node.js ${{ matrix.node-version }}
-            uses: peaceiris/actions-gh-pages@v3
-            with:
-              node-version: ${{ matrix.node-version }}
-              cache: 'npm'
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
 
-          - name: Install dependencies
-            run: npm install
+      - name: Build project
+        run: npm run build
 
-          - name: Build application
-            run: npm run build
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v4
+        with:
+          name: production-files
+          path: ./dist
 
-          - name: Upload production-ready build files
-            uses: actions/upload-artifact@v4
-            with:
-              name: production-files
-              path: ./dist
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
 
-    deploy:
-        name: Deploy
-        needs: build
-        runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: production-files
+          path: ./dist
 
-        steps:
-          - name: Download artifact
-            uses: actions/download-artifact@v4
-            with:
-              name: production-files
-              path: ./dist
-
-          - name: Deploy to GitHub Pages
-            uses: peaceiris/actions-gh-pages@v3
-            with:
-              github_token: ${{ secrets.GITHUB_TOKEN }}
-              publish_dir: ./dist
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
